# bevy-prototype

./: .editorconfig  Cargo.toml  README.md  rustfmt.toml
src/: acceleration.rs  asset_loader_plugin.rs  asteroid.rs  asteroid_plugin.rs  camera_plugin.rs  collider.rs  collision_damage.rs  collision_detection_plugin.rs  collision_event.rs  debug_plugin.rs  despawn_plugin.rs  game_state.rs  health.rs  in_game_set.rs  main.rs  movement_plugin.rs  moving_object_bundle.rs  position.rs  scene_assets.rs  schedule_plugin.rs  spaceship.rs  spaceship_bundle.rs  spaceship_missile.rs  spaceship_plugin.rs  spaceship_shield.rs  spawn_timer.rs  state_plugin.rs  velocity.rs
