[package]
authors = ["David Wallace Croft <david@CroftSoft.com>"]
description = "My first Bevy program"
edition = "2021"
homepage = "https://www.CroftSoft.com/"
license = "MIT"
name = "bevy-prototype"
publish = false
readme = "README.md"
repository = "https://github.com/david-wallace-croft/bevy-prototype"
version = "0.0.0-SNAPSHOT"

[dependencies]
bevy = "0.14.2"
rand = "0.8.5"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = "thin"

[profile.wasm-release]
inherits = "release"
opt-level = "s"
strip = "debuginfo"
